--- a/share/webgames/site1/index.html
+++ b/share/webgames/site1/index.html
@@ -9,12 +9,20 @@
 <body>
   <main>
     <h1>WebGames</h1>
-    <p>Hosting estático para Home Assistant con Caddy.</p>
+    <p>Hosting estatico para Home Assistant con Caddy.</p>
     <ul>
-      <li><a href="/g/j1">Juego 1 (/g/j1)</a></li>
-      <li><a href="/g/j2">Juego 2 (/g/j2)</a></li>
+      <li><a href="/g/j1">Juego 1 - Line Thre (/g/j1)</a></li>
+      <li><a href="/g/j2">Juego 2 - Scam Scape (provisional) (/g/j2)</a></li>
+      <li><a href="/g/j3">Juego 3 - To the Moon (/g/j3)</a></li>
+      <li><a href="/g/j4">Juego 4 - DEXTris (/g/j4)</a></li>
+      <li><a href="/g/j5">Juego 5 - HoneySwepper (/g/j5)</a></li>
+      <li><a href="/g/j6">Juego 6 - Hex Survivors (/g/j6)</a></li>
       <li><a href="/j1">Alias corto /j1</a></li>
       <li><a href="/j2">Alias corto /j2</a></li>
+      <li><a href="/j3">Alias corto /j3</a></li>
+      <li><a href="/j4">Alias corto /j4</a></li>
+      <li><a href="/j5">Alias corto /j5</a></li>
+      <li><a href="/j6">Alias corto /j6</a></li>
     </ul>
   </main>
 </body>
